make FreeCodeCamp conditional from env

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "random-quote-machine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Junscuzzy.github.io/random-quote-machine",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "normalize.css": "^8.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -11,6 +13,8 @@
     "react-svg": "^10.0.23"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
